classDiagram
    class Personne {
        <<abstract>>
        #String nom
        #String prenom
        #String email
    }
    
    class User {
        -String password
        +seConnecter()
    }
    
    class Client {
        -String entreprise
        -String telephone
        -String adresse
    }
    
    Personne <|-- User : Héritage
    Personne <|-- Client : Héritage

    class Devis {
        -String numero
        -String statut
        -Float totalHT
        -Float totalTTC
        +calculerTotal()
        +exporterPDF()
        +changerStatut()
    }
    
    class LigneDevis {
        -String description
        -Float quantite
        -Float prixUnitaire
        +calculerLigne() Float
    }

    class Facture {
        -String numero
        -String statut
        -Float totalHT
        -Float totalTTC
        +calculerTotal()
        +exporterPDF()
        +changerStatut()
    }
    
    class LigneFacture {
        -String description
        -Float quantite
        -Float prixUnitaire
        +calculerLigne() Float
    }
    
    User "1" --> "*" Client : gère
    User "1" --> "*" Devis : emet
    User "1" --> "*" Facture : facture
    Client "1" --> "*" Devis : reçoit
    Client "1" --> "*" Facture : doit payer
    Devis "1" *-- "1..*" LigneDevis : composition
    Facture "1" *-- "1..*" LigneFacture : composition
    Devis "1" --> "0..1" Facture : transformation
